--- a/jackson/build.gradle
+++ b/jackson/build.gradle
@@ -1,16 +1,4 @@
-plugins {
-    id 'java'
-}
-
-group 'lcalmsky.io.jaime-note'
-version '1.0-SNAPSHOT'
-
-sourceCompatibility = 1.8
-
-repositories {
-    mavenCentral()
-}
-
 dependencies {
-    testCompile group: 'junit', name: 'junit', version: '4.12'
+    compile 'com.fasterxml.jackson.core:jackson-databind:2.10.1'
+    compile "org.projectlombok:lombok:1.18.6"
 }
