--- a/jackson/build.gradle
+++ b/jackson/build.gradle
@@ -1,4 +1,5 @@
 dependencies {
-    compile 'com.fasterxml.jackson.core:jackson-databind:2.10.1'
-    compile "org.projectlombok:lombok:1.18.6"
+    implementation 'com.fasterxml.jackson.core:jackson-databind:2.10.1'
+    implementation "org.projectlombok:lombok:1.18.6"
+    annotationProcessor "org.projectlombok:lombok:1.18.6"
 }
