--- a/junit/build.gradle
+++ b/junit/build.gradle
@@ -4,10 +4,9 @@ test {
 
 dependencies {
     // junit5
-    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.3.1'
-    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.3.1'
+    testImplementation 'org.junit.jupiter:junit-jupiter-engine:5.5.2'
 
     // lombok
-    implementation "org.projectlombok:lombok:1.18.6"
-    annotationProcessor "org.projectlombok:lombok:1.18.6"
+    testImplementation "org.projectlombok:lombok:1.18.6"
+    testAnnotationProcessor "org.projectlombok:lombok:1.18.6"
 }
