--- a/build.gradle
+++ b/build.gradle
@@ -3,13 +3,19 @@ allprojects {
     version '1.0-SNAPSHOT'
 }
 
-ext {
-    junitJupiterVersion = '5.4.2'
-    junitPlatformVersion = '1.2.0'
-    junitVintageVersion = '5.4.2'
+
+buildscript {
+    repositories {
+        jcenter()
+    }
 }
 
 subprojects {
+    ext {
+        junitJupiterVersion = '5.4.2'
+        junitPlatformVersion = '1.2.0'
+        junitVintageVersion = '5.4.2'
+    }
     apply plugin: 'java'
     sourceCompatibility = 1.8
     repositories {
