--- a/build.gradle
+++ b/build.gradle
@@ -22,6 +22,12 @@ subprojects {
         mavenCentral()
     }
     dependencies {
+        // lombok
+        implementation "org.projectlombok:lombok:1.18.10"
+        annotationProcessor "org.projectlombok:lombok:1.18.10"
+        testImplementation "org.projectlombok:lombok:1.18.10"
+        testAnnotationProcessor "org.projectlombok:lombok:1.18.10"
+
         // junit5
         testImplementation "org.junit.platform:junit-platform-runner:${junitPlatformVersion}"
         testImplementation "org.junit.vintage:junit-vintage-engine:${junitVintageVersion}"
@@ -29,9 +35,5 @@ subprojects {
         testImplementation "org.junit.jupiter:junit-jupiter-engine:${junitJupiterVersion}"
         testImplementation "org.junit.jupiter:junit-jupiter-params:${junitJupiterVersion}"
         testImplementation "org.junit.jupiter:junit-jupiter-api:${junitJupiterVersion}"
-
-        // lombok
-        testImplementation "org.projectlombok:lombok:1.18.10"
-        testAnnotationProcessor "org.projectlombok:lombok:1.18.10"
     }
 }
