--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "react"]
 	path = react
 	url = https://github.com/lcalmsky/react.git
+[submodule "spock"]
+	path = spock
+	url = https://github.com/lcalmsky/spock.git
