--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "spock"]
 	path = spock
 	url = https://github.com/lcalmsky/spock.git
+[submodule "feign"]
+	path = feign
+	url = https://github.com/lcalmsky/feign.git
